# poweroffd

./: .gitignore  LICENSE  Makefile  README.md  install.sh  poweroff-send.cpp  poweroffd.conf  poweroffd.cpp  poweroffd.service  poweroffd_1.0.0_amd64.deb  setup.ps1
.github/workflows/: build.yml
packaging/: build-deb.sh
windows/: CMakeLists.txt  build.bat  install.ps1  poweroff-send-win.cpp  poweroffd-win.cpp  poweroffd.conf
windows/gui/: Cargo.toml  build.ps1
windows/gui/src/: app.rs  connection.rs  main.rs  ping.rs  wol.rs
