[package]
name = "poweroffd-gui"
version = "0.1.0"
edition = "2021"
description = "Tray/desktop GUI for poweroffd — wake, shutdown, and lock remote machines"
license = "MIT"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
winping = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
